# colliate-engine

./: .env  README.md  gcp-credentials.json  main.py  pyproject.toml  test_configs.py  test_img.py  test_real_vid.py  test_tts_real.py  test_vid.py  test_vid2.py  test_vid_base_url.py  test_vid_http.py  test_vid_proj.py  test_vid_real.py
alembic/: env.py
alembic/versions/: 1b115ea85d33_add_product_image_path_to_jobs.py  3352a9b29fc1_add_audio_clip_path_to_job_shots.py  3bcf0cfdde97_add_title_to_jobs.py  6c63165cf4b1_rename_character_to_reference_image.py  814223b98cff_initial_migration.py  98cf983cb5e0_penambahan_table.py  9e22c96d63e2_initial_migration.py  a1b2c3d4e5f6_add_raw_video_clip_path_to_job_shots.py  c1017d84183b_add_character_image_path_to_jobs.py  c3d4e5f6a7b8_add_user_id_to_jobs.py  d46496c637d1_add_jobshot_table_and_product_research.py  d6c671482d4d_penambahan_table.py
app/api/middleware/: auth.py
app/api/routes/: __init__.py  jobs.py  video.py
app/core/: config.py  database.py  exceptions.py  llm.py  logging.py
app/graph/: graph.py  state.py
app/graph/nodes/: __init__.py  assembly.py  director.py  research.py  shot_loop.py
app/models/: job.py
app/schemas/: job.py  storyboard.py  video.py
app/services/: job_service.py
app/worker/: video_worker.py
tests/: test_imagen_skincare.py  test_veo_integration.py
